[gd_scene load_steps=4 format=3 uid="uid://7gxbjqm3kqyg"]

[ext_resource type="PackedScene" uid="uid://cdje62gbxlvk8" path="res://Scenes/Windows/BaseWindow.tscn" id="1_xa873"]
[ext_resource type="Script" path="res://Scripts/Windows/ConnexionManager.gd" id="2_mrn5e"]
[ext_resource type="Script" path="res://Scripts/Windows/network_details.gd" id="3_tg3og"]

[node name="Panel" instance=ExtResource("1_xa873")]
offset_right = 799.0

[node name="Label" parent="VBoxContainer/TitleBar" index="0"]
text = "Connexion Manager"

[node name="Container" parent="VBoxContainer/MarginContainer" index="0"]
script = ExtResource("2_mrn5e")

[node name="NetworksList" type="ItemList" parent="VBoxContainer/MarginContainer/Container" index="0"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NetworkDetails" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Container" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_tg3og")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Container/NetworkDetails" index="0"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/MarginContainer/Container/NetworkDetails/HBoxContainer" index="0"]
layout_mode = 2
text = "Back"

[node name="Container" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Container/NetworkDetails/HBoxContainer" index="1"]
layout_mode = 2

[node name="NetworkNameLabel" type="Label" parent="VBoxContainer/MarginContainer/Container/NetworkDetails/HBoxContainer/Container" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Nom du r√©seau"

[node name="NetworkHostIPLabel" type="Label" parent="VBoxContainer/MarginContainer/Container/NetworkDetails/HBoxContainer/Container" index="1"]
layout_mode = 2
text = "(0.0.0.0)"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/Container/NetworkDetails" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="ComputersList" type="ItemList" parent="VBoxContainer/MarginContainer/Container/NetworkDetails/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="item_clicked" from="VBoxContainer/MarginContainer/Container/NetworksList" to="VBoxContainer/MarginContainer/Container" method="_on_networks_list_item_clicked"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Container/NetworkDetails/HBoxContainer/BackButton" to="VBoxContainer/MarginContainer/Container/NetworkDetails" method="_on_back_button_pressed"]
