extends Control

static var available_networks : Array[Network] = [
	Network.TestNetwork()
]

enum STATE {
	NETWORK_LIST,
	NETWORK_DETAILS,
	
}

@onready var network_list = $NetworksList
@onready var network_details = $NetworkDetails

@onready var network_name_label = $NetworkDetails/NetworkNameLabel
@onready var network_host_ip_label = $NetworkDetails/NetworkHostIPLabel

@onready var computer_list = $NetworkDetails/ScrollContainer/ComputersList

var connected_network: Network

func _ready():
	for network in available_networks:
		network_list.add_item(str(network.network_name, ' (', network.host_ip, '.0.0)'))
	_switch_state(STATE.NETWORK_LIST)	


func _on_networks_list_item_clicked(index: int, at_position: Vector2, mouse_button_index: int) -> void:
	if mouse_button_index != 1:
		return
		
	connected_network = available_networks[index]
	
	network_name_label.text = connected_network.network_name
	network_host_ip_label.text = str("(", connected_network.host_ip, ".0.0)")
	
	computer_list.clear()
	
	for computer in connected_network.computers:
		computer_list.add_item(computer.name)
		
	
	_switch_state(STATE.NETWORK_DETAILS)



func _switch_state(new_state: STATE):
	match new_state:
		STATE.NETWORK_LIST:
			network_list.visible = true
			network_details.visible = false
		STATE.NETWORK_DETAILS:
			network_list.visible = false
			network_details.visible = true
